fixes for alerts on mobile

--- a/upload/styles/cb_28/theme/scss/_header.scss
+++ b/upload/styles/cb_28/theme/scss/_header.scss
@@ -628,12 +628,6 @@
 		top: 100%;
 		z-index: 3;
 	}
-	.alert{
-		position: fixed;
-		width: 100%;
-		z-index:5;
-		padding: 10px 40px 10px 10px;
-	}
 	.navbar-header .search{
 		width: 100%;
 	}
